Fix CSS formatting and add pointer-events rule

--- a/style.css
+++ b/style.css
@@ -40,4 +40,8 @@
     padding: 10px 25px;
     border-radius: 66px;
     box-shadow: 0.5rem 1rem 3rem hsl(0, 0%, 0%, 0.3);
+
+  }
+  .tenor-gif-embed {
+    pointer-events: none;
   }
